--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.JigsawPuzzle"
         tools:targetApi="31">
         <activity
-            android:name="ltd.v2.game1.PuzzleActivity"
+            android:name="ltd.v2.game1.PuzzleActivity2"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
