--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JigsawPuzzle"
         tools:targetApi="31">
+
         <activity
             android:name="ltd.v2.game1.activity.PuzzleActivity"
             android:screenOrientation="landscape"
@@ -22,6 +23,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+<!--        <receiver android:name=".helper.ParcelReceiver"-->
+<!--            android:enabled="true"-->
+<!--            android:exported="true">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="ltd.v2.game1" />-->
+<!--            </intent-filter>-->
+<!--        </receiver>-->
 
     </application>
 
